keys & movement fixed

--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
 
-    <canvas id="canvas" width="800" height="500"></canvas>
+    <canvas id="canvas" width="1600" height="1000"></canvas>
     <button id="start-button">Start Adventure</button>
 
-    <script src="/assets/js/constants.js"></script>
-    <script src="/assets/js/models/keyPiece.js"></script>
-    <script src="/assets/js/models/player.js"></script>
-    <script src="/assets/js/models/background.js"></script>
-    <script src="/assets/js/models/game.js"></script>
-    <script src="/assets/js/index.js"></script>
+    <script src="./assets/js/constants.js"></script>
+    <script src="./assets/js/models/keyPiece.js"></script>
+    <script src="./assets/js/models/player.js"></script>
+    <script src="./assets/js/models/background.js"></script>
+    <script src="./assets/js/models/game.js"></script>
+    <script src="./assets/js/index.js"></script>
     
 </body>
 </html>
