Enemy in progress

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <button id="start-button">Start Adventure</button>
 
     <script src="./assets/js/constants.js"></script>
+    <script src="./assets/js/models/enemy.js"></script>
     <script src="./assets/js/models/keyPiece.js"></script>
     <script src="./assets/js/models/player.js"></script>
     <script src="./assets/js/models/background.js"></script>
