obstacles in progress

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <canvas id="canvas" width="1600" height="1000"></canvas>
     <button id="start-button">Start Adventure</button>
 
+    
     <script src="./assets/js/constants.js"></script>
+    <script src="./assets/js/models/obstacles.js"></script>
     <script src="./assets/js/models/enemy.js"></script>
     <script src="./assets/js/models/keyPiece.js"></script>
     <script src="./assets/js/models/player.js"></script>
