--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     
     <script src="./assets/js/constants.js"></script>
+    <script src="./assets/js/models/bullet.js"></script>
     <script src="./assets/js/models/obstacles.js"></script>
     <script src="./assets/js/models/enemy.js"></script>
     <script src="./assets/js/models/keyPiece.js"></script>
