--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <body>
 
     <canvas id="canvas" width="1600" height="1000"></canvas>
-    <button id="start-button">Start Adventure</button>
+    
+    <button id="start-button">
+        <img id="start-img" src="./assets/images/game-ui/start-button.png" alt="Start button"></button>
+
+    <img id="movements" src="./assets/images/game-ui/ui-control.png" alt="instrucciones">
 
     
     <script src="./assets/js/constants.js"></script>
