merauder class & player range

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
     
     <script src="./assets/js/constants.js"></script>
+    <script src="./assets/js/models/marauder.js"></script>
     <script src="./assets/js/models/bullet.js"></script>
     <script src="./assets/js/models/obstacles.js"></script>
     <script src="./assets/js/models/enemy.js"></script>
