--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 
     <img id="top-display" src="./assets/images/game-ui/top-display.png" alt="top display">
     <img id="game-logo" src="./assets/images/game-ui/game logo.png" alt="game logo">
-    <p id="introText">Hi Adventurer! You have a new mission. Obtain all three keys from Aura before they are taken by The Marauder. Be careful, he is dangerous. defend yourself! <br> <br>Good luck!</p>
+    <img id="intro-text" src="./assets/images/game-ui/pantallaInicio.png" alt="intro-txt">
+   <!--  <p id="introText">Hi Adventurer! You have a new mission. Obtain all three keys from Aura before they are taken by The Marauder. Be careful, he is dangerous. defend yourself! <br> <br>Good luck!</p> -->
+
+   
 
     <button id="start-button">
         <img id="start-img" src="./assets/images/game-ui/start-button.png" alt="Start button"></button>
@@ -22,7 +25,7 @@
         
     <img id="movements" src="./assets/images/game-ui/ui-control.png" alt="instrucciones">
 
-  
+    <img id="bottom-display" src="./assets/images/game-ui/top-display.png" alt="bottom display">
 
     
     <script src="./assets/js/constants.js"></script>
