Home button fixed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link  rel="icon"   href="./assets/images/favicon/favicon.png" type="image/png"/>
 </head>
 <body>
-    <button id="home-button" class="display-on" onclick="window.location.href='https://pmateosx.github.io/Pixel-Keys/">
+    <button id="home-button" class="display-on" onclick="window.location.href='https://pmateosx.github.io/Pixel-Keys/'">
         <img id="home-img" src="assets/images/screens/home-button.png" alt="Home">
     </button>
     
