Game over dead screen

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <link  rel="icon"   href="./assets/images/favicon/favicon.png" type="image/png"/>
 </head>
 <body>
-    <button id="home-button" class="display-on" onclick="window.location.href='https://pmateosx.github.io/Pixel-Keys/'">
-        <img id="home-img" src="assets/images/screens/home-button.png" alt="Home">
+    <!-- HOME BUTTON -->
+    <button id="home-button" class="display-off" onclick="window.location.href='https://pmateosx.github.io/Pixel-Keys/'">
+        <img id="home-img" src="./assets/images/screens/home-button.png" alt="Home">
     </button>
     
     <!-- Win Screen -->
@@ -22,7 +23,14 @@
 
     <!-- DIPLOMA -->
     <p id="name" class="display-off"></p>
-    <img id="diploma" class="display-off" src="assets/images/screens/diploma_1.png" alt="diploma">
+    <img id="diploma" class="display-off" src="./assets/images/screens/diploma_1.png" alt="diploma">
+
+    <!-- GAME OVER -->
+    <button id="game-over-button" class="display-off" onclick="window.location.href='https://pmateosx.github.io/Pixel-Keys/'">
+        <img id="game-over-img-button" src="./assets/images/screens/restart.png" alt="Home">
+    </button>
+
+    <img id="game-over" class="display-off" src="./assets/images/screens/game-over-screen.png" alt="">
 
     <!-- CANVAS -->
     <canvas id="canvas" class="display-on" width="1600" height="1000"></canvas>
