--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 
         <!-- GAME OVER -->
         <div class="game-over-container">
-            <button id="game-over-button" class="display-off" onclick="window.location.href='https://pmateosx.github.io/Pixel-Keys/'">
+<!--             <button id="game-over-button" class="display-off" onclick="window.location.href='https://pmateosx.github.io/Pixel-Keys/'">
                 <img id="game-over-img-button" src="./assets/images/screens/restart.png" alt="Home">
-            </button>
+            </button> -->
         
             <img id="game-over" class="display-off" src="./assets/images/screens/game-over-screen.png" alt="">
         </div>
