Sound & sound button

--- a/index.html
+++ b/index.html
@@ -10,9 +10,16 @@
 </head>
 <body>
     <!-- HOME BUTTON -->
-    <button id="home-button" class="display-off" onclick="window.location.href='https://pmateosx.github.io/Pixel-Keys/'">
-        <img id="home-img" src="./assets/images/screens/home-button.png" alt="Home">
-    </button>
+    <div class="nav-buttons">
+        <button id="home-button" class="display-on" onclick="window.location.href='https://pmateosx.github.io/Pixel-Keys/'">
+            <img id="home-img" src="./assets/images/screens/home-button.png" alt="Home">
+        </button>
+    
+        <!-- SOUND BUTTON -->
+        <button id="sound-button" class="display-on">
+            <img id="sound-img" src="./assets/images/game-ui/sound.png" alt="Sound">
+        </button>
+    </div>
 
     <div class="canvas-container">
 
