--- a/index.html
+++ b/index.html
@@ -61,14 +61,15 @@
 
     <img id="top-display" src="./assets/images/game-ui/top-display.png" alt="top display">
 
-    <img id="game-logo" src="./assets/images/game-ui/game logo.png" alt="game logo">
-    <img id="intro-text" src="./assets/images/game-ui/pantallaInicio.png" alt="intro-txt">
+    <!-- INTRO SCREEN -->
+    <div class="intro-screen">
+        <img id="game-logo" src="./assets/images/game-ui/game logo.png" alt="game logo">
+        <img id="intro-text" src="./assets/images/game-ui/pantallaInicio.png" alt="intro-txt">
 
-    <button id="start-button">
-        <img id="start-img" src="./assets/images/game-ui/start-button.png" alt="Start button">
-    </button>
-        
-
+        <button id="start-button">
+            <img id="start-img" src="./assets/images/game-ui/start-button.png" alt="Start button">
+        </button>
+    </div>
 
     <img id="bottom-display" src="./assets/images/game-ui/top-display.png" alt="bottom display">
 
