--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     <script src="./assets/js/models/bullet.js"></script>
     <script src="./assets/js/models/obstacles.js"></script>
     <script src="./assets/js/models/enemy.js"></script>
+    <script src="./assets/js/models/potion.js"></script>
     <script src="./assets/js/models/keyPiece.js"></script>
     <script src="./assets/js/models/player.js"></script>
     <script src="./assets/js/models/background.js"></script>
