--- a/index.html
+++ b/index.html
@@ -19,15 +19,49 @@
         <button id="sound-button" class="display-on">
             <img id="sound-img" src="./assets/images/game-ui/sound.png" alt="Sound">
         </button>
-    </div>
+
+        <!-- INSTRUCTIONS -->
+        <table class="instructions" id="movements">
+          <tr>
+            <th>MOVEMENTS</th>
+          </tr>
+          <tr>
+            <td>
+        W: UP</td>
+          </tr>
+          <tr>
+            <td>A: LEFT</td>
+          </tr>
+          <tr>
+            <td>S: DOWN</td>
+          </tr>
+          <tr>
+            <td>D: RIGHT</td>
+          </tr>
+        </table>
+      <table class="instructions" id="movements2">
+          <tr>
+            <th>SHOT</th>
+          </tr>
+          <tr>
+            <td>KEY UP</td>
+          </tr>
+          <tr>
+            <td>KEY DOWN</td>
+          </tr>
+          <tr>
+            <td>KEY LEFT</td>
+          </tr>
+          <tr>
+            <td>KEY RIGHT</td>
+          </tr>
+        </table>
+      </div>
 
     <div class="canvas-container">
 
         <!-- CANVAS -->
         <canvas id="canvas" class="display-on" width="1600" height="1000"></canvas>
-
-        <img id="movements" src="./assets/images/game-ui/ui-control.png" alt="instrucciones">
-
 
         <!-- Win Screen -->
         <div class="win-container">
